# redes_tp1_file_transfer

./: .gitignore  Ideas.txt  LICENSE  README.md  plugin_wireshark.lua  pyproject.toml  run_test.sh
doc/: README.md  informe.html  informe.md  protocolo.md
features/: concurrencia.feature  download.feature  rdt_selective_repeat.feature  rdt_stop_and_wait.feature  upload.feature  validaciones.feature
grupo_17/: README.md
grupo_17/src/: download  start-server
grupo_17/src/lib/: ejecutar_mn.sh  logger.py  rdt_socket.py  segment.py  topologia_50.py
grupo_17/src/lib/protocol_strategies/: protocol_strategy.py  selective_repeat.py  stop_and_wait.py
src/: download  start-server  upload
src/lib/: const.py  instalar_plugin.sh  logger.py  rdt2_redes.lua  rdt_client.py  rdt_gabriel.lua  rdt_socket.py  segment.py  topologia.py  topologia_20.py  topologia_30.py
src/lib/app/: msj_serializer.py  rdt.py  stop_and_wait.py
src/lib/cli/: base.py  download.py  server.py  upload.py
src/lib/command/: download.py  server.py  upload.py
src/lib/params/: download.py  server.py  upload.py
src/lib/protocol_strategies/: protocol_strategy.py  selective_repeat.py  stop_and_wait.py
src/lib/server/: dispatcher.py  handler.py  listener.py  registry.py  socket.py
src/lib/validations/: __init__.py  file.py  folder.py  host.py  name.py  port.py  protocol.py
src_2/: start-server
tests/: conftest.py  test_auto.py  test_client_protocol.py  test_concurrencia.py  test_download.py  test_rdt.py  test_server_protocol.py  test_sr.py  test_upload.py  test_validaciones.py
(+69 files in other folders)
