[project]
name = "redes-tp1"
version = "0.1.0"
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-bdd",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/lib"]

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (PEP8)
    "F",   # pyflakes (errores reales)
    "W",   # warnings
    "I",   # import sorting
    "N",   # naming conventions
    "UP",  # mejoras de sintaxis moderna
    "B",   # bugbear (bugs comunes)
    "A",   # builtins shadowing
    "C4",  # comprehensions
    "DTZ", # datetime issues
    "T20", # prints (para debug olvidado)
    "RET", # returns inconsistentes
    "SIM", # simplificaciones
    "ARG", # argumentos no usados
    "PTH", # uso de pathlib
    "ERA", # código muerto
]

ignore = [
    "E501",  # line too long (lo maneja el formatter)
    "T201",  # permitir prints
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
